--- a/html/home.html
+++ b/html/home.html
@@ -88,6 +88,7 @@
 
 		<footer class="footer">
 			<p>Mã số sinh viên - Họ Tên: 21011371 - Phan Nguyễn Đại Dương</p>
+			<p><a href="https://duongphan2101.github.io/21011371_PhanNguyenDaiDuong_TK2_GIT/html/home.html">GITHUB</a></p>
 			<p>Lớp - Khoa: DHCNTT18ATT - CNTT</p>
 		</footer>
 
